      height).

    - Added new preference option for switching between different resizing
      algorithms (higher quality usually means longer page loading times).

    - Added "Scan now" button to library watch list dialog to trigger
      immediate update.

    - Added an option to quit the program when the ESC key is pressed. When
      disabled, ESC only exits fullscreen mode.

    - Updated traditional Chinese translation (by Wayne Su).

MComix 0.98
Release date: 09.04.2012

    - Fixed a bug that occasionally caused MComix to display wrong images
      after deleting an image from a directory.

    - Fixed a bug that caused MComix to jump back up after scrolling down when
      an archive was still being loaded.

    - Fixed NumLock being enabled breaking other keybindings containing
      Shift, Alt or Ctrl (e.g. smart scrolling with space).

    - The last-read-page module now falls back to pysqlite2 if sqlite3 isn't
      available.

    - The library can now scan directories for new files every time it is
      started, and automatically add new books. Watched directories can be
      edited with the "Watch list" button in the library main window.

    - Added "Date added" to library sort criteriae. This might be slightly
      inaccurate for older library entries, as only the day, not the time of
      the moment a book was added used to be stored in the library database.

    - Improved performance for library book area and thumbnail side bar by
      only loading thumbnails when they become visible, e.g. triggered by the
      user scrolling around. The "Delay thumbnail generation" option has thus
      been removed.

    - Greatly improved performance for browsing directories with many images.

    - Updated Japanese translation (by Toshiharu Kudoh).

    - Updated French translation (by Frédéric Chateaux).

MComix 0.97.1
Release date: 18.02.2012

    - Corrected libunrar regression. (thanks to Giovanni Scafora for pointing
      this out)
